--- a/TestControlTool.Web/Views/Home/Help.cshtml
+++ b/TestControlTool.Web/Views/Home/Help.cshtml
@@ -100,7 +100,7 @@
                     <li>
                         <h4 id="GettingLogs">Getting Logs</h4>
                         <p class="padding">
-                            Test Control Tool will send you email with all reports and logs generated during the task execution. Admit, that we= don't keep logs at the server.
+                            Test Control Tool will send you email with all reports and logs generated during the task execution. Admit, that we don't keep logs at the server.
                         </p>
                         <p class="padding">
                             Another way - press 'View Logs' link and get the general log in the UI. This log is also available during task execution
