--- a/TestControlTool.Web/Views/Home/Machines.cshtml
+++ b/TestControlTool.Web/Views/Home/Machines.cshtml
@@ -29,7 +29,7 @@
             @foreach (var property in machineModel.VisiblePropertiesFromList(MachineModel.ShownProperties))
             {
                 <td>
-                    @Html.Link(property, property.GetValue(machineModel).ToString(), new { Id = machineModel.Id })
+                    @Html.Link(property, property.GetValue(machineModel), new { Id = machineModel.Id })
                 </td>                    
             }
             <td>
@@ -37,6 +37,9 @@
             </td>
             <td>
                 <a href="@Url.Action("Edit", "Machine", new { Id = machineModel.Id })" data-toggle="tooltip" title="Edit machine" rel="tooltip"><i class="icon-pencil"></i></a>
+            </td>
+            <td id ="@("Machine" + machineModel.Id + "Configure")">
+                <a href="#" onclick="ConfigureMachine('@machineModel.Id'); return false;" data-toggle="tooltip" title="Initial machine configuration" rel="tooltip"><i class="icon-cog"></i></a>
             </td>
             <td>
                 <button rel="tooltip" type='button' class='close' aria-hidden='true' style="float: none" onclick="removeMachine('@machineModel.Id');" title="Delete machine" data-toggle="tooltip">×</button>
@@ -59,6 +62,48 @@
     function removeMachine(id) {
         window.location.href = '@Url.Action("Delete", "Machine")/' + id;
     }
+
+    $(document).ready(function() {
+        RefreshStatuses();
+    });
+    
+    function ConfigureMachine(id) {
+        $.ajax({
+            url: '@Url.Action("Configure", "Machine")',
+            data: { Id: id },
+            dataType: 'json'
+        }).done(function () {
+            RefreshStatuses();
+        });
+    }
+
+    function RefreshStatuses() {
+        $.ajax({
+            url: '@Url.Action("GetMachinesConfiguringStatuses", "Machine")',
+            dataType: 'json'
+        }).done(function (data) {
+            $('td[id^=Machine][id$=Configure]').each(function () {
+                var link = $(this).find('a');
+                var id = $(this).attr('id').replace('Machine', '').replace('Configure', '');
+
+                if (data[id] < 0) {
+                    link.html('<i class="icon-cog"></i>');
+                    link.attr('onclick', 'ConfigureMachine("' + id + '")');
+                    link.attr('title', 'Initial machine configuration');
+                    link.attr('data-original-title', 'Initial machine configuration');
+                } else {
+                    link.html('<img src="@Url.Content("~/Content/images/select2-spinner.gif")">');
+                    link.attr('onclick', 'return false');
+                    link.attr('title', data[id] + '%');
+                    link.attr('data-original-title', data[id] + '%');
+                }
+            });
+        });
+    }
+    
+    setInterval(function () {
+        RefreshStatuses();
+    }, 5000);
     
     ShowMachines();
 </script>
