--- a/TestControlTool.Web/Views/Machine/Details.cshtml
+++ b/TestControlTool.Web/Views/Machine/Details.cshtml
@@ -1,4 +1,5 @@
 @using BootstrapSupport
+@using TestControlTool.Web.BootstrapSupport.HtmlHelpers
 @using TestControlTool.Web.Models
 @model MachineModel
 @{
@@ -14,7 +15,7 @@
                 @property.GetLabel().ToSeparatedWords()
             </dt>
             <dd>
-                @Html.Display(property.Name)                
+                @Html.Display(property.Name, true)                
             </dd>
         }
     </dl>
