--- a/TestControlTool.Web/Views/Shared/_alerts.cshtml
+++ b/TestControlTool.Web/Views/Shared/_alerts.cshtml
@@ -1,19 +1,22 @@
 @using BootstrapSupport
-@if (TempData.ContainsKey(Alerts.ATTENTION))
+@if (TempData.ContainsKey("Alerts") && TempData["Alerts"] is List<TestControlTool.Core.Models.Pair<string, string>>)
 {
-    <div class="alert alert-block">
-        <a class="close" data-dismiss="alert" href="#">x</a>
-        <h4 class="alert-heading">Attention!</h4>
-        @TempData[Alerts.ATTENTION]
-    </div>
-}
-@foreach(string key in Alerts.ALL.Except(new[] {Alerts.ATTENTION}))
+    var alerts = TempData["Alerts"] as List<TestControlTool.Core.Models.Pair<string, string>>;
+
+    foreach (var pair in alerts.Where(x => x.Key == Alerts.ATTENTION))
+     {
+         <div class="alert alert-block">
+             <a class="close" data-dismiss="alert" href="#">x</a>
+             <h4 class="alert-heading">Attention!</h4>
+             @pair.Value
+         </div>
+     }
+    foreach (var pair in alerts.Where(x => x.Key != Alerts.ATTENTION))
     {
-        if (TempData.ContainsKey(key))
-         {
-             <div class="alert alert-@key">
-                 <button type="button" class="close" data-dismiss="alert">x</button>
-                 @TempData[key]
-             </div>
-         }
+            <div class="alert alert-@pair.Key">
+                <button type="button" class="close" data-dismiss="alert">x</button>
+                @pair.Value
+            </div>
     }
+
+}
